# audio-transcriber

./: .gitignore  CONTRIBUTING.md  Launch-LAN.cmd  Launch.cmd  README.md  RUNME - Start TRANSCRIBER.cmd  START_HERE.md  Setup.cmd  pyproject.toml  requirements-speakers.txt  requirements.txt  setup_windows.ps1  streamlit_app.py  transcribe_cli.py  watch_hotfolder.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: .gitignore  Launch-DEBUG.cmd  Launch-LAN.cmd  Launch.cmd  Launch.ps1  README.md  START_HERE.md  Setup-Speakers.cmd  Setup.cmd  pyproject.toml  requirements-hotfolder.txt  requirements.txt  setup_unix.sh  setup_windows.ps1  streamlit_app.py  transcribe_cli.py  watch_hotfolder.py
app/.github/ISSUE_TEMPLATE/: bug_report.md
app/.github/workflows/: ci.yml
app/docs/: CHANGELOG.md  CLEANUP_ROADMAP.md  CODE_OF_CONDUCT.md  PROJECT_STRUCTURE.md  SECURITY.md
app/scripts/: package_windows.ps1
app/tests/: test_formats.py  test_hotfolder.py  test_smoke.py
app/transcriber/: __init__.py  core.py  ffmpeg.py  hotfolder.py  report.py  speakers.py  telemetry.py
scripts/: make_icon.py
transcriber/: core.py  ffmpeg.py  formats.py  report.py  speakers.py
